k8s/base/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-ingress
spec:
  podSelector: { matchLabels: { app: frontend } }
  ingress:
    - ports: [{ protocol: TCP, port: 8080 }]
  egress:
    - to: [{ namespaceSelector: {} }]
      ports:
        - { protocol: TCP, port: 3550 }
        - { protocol: TCP, port: 7000 }
        - { protocol: TCP, port: 7070 }
        - { protocol: TCP, port: 8080 }
        - { protocol: TCP, port: 5050 }
        - { protocol: TCP, port: 9555 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-service-meshless-grpc
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
      ports:
        - { protocol: TCP, port: 3550 }
        - { protocol: TCP, port: 7000 }
        - { protocol: TCP, port: 7070 }
        - { protocol: TCP, port: 8080 }
        - { protocol: TCP, port: 5050 }
        - { protocol: TCP, port: 50051 }
        - { protocol: TCP, port: 9555 }
        - { protocol: TCP, port: 6379 }
  egress:
    - to:
        - podSelector: {}
    - to:
        - namespaceSelector: {}
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
